--- a/.github/workflows/master_zhihao-sample.yml
+++ b/.github/workflows/master_zhihao-sample.yml
@@ -9,6 +9,13 @@ on:
       - master
   workflow_dispatch:
 
+env:
+  AZURE_WEBAPP_NAME: "zhihao-sample"
+  DOTNET_VERSION: "8.x"
+  NODE_VERSION: "20.x"
+  SOLUTION_PATH: "SampleExercise.sln"
+  SERVER_PROJECT_PATH: "SampleExercise.Server/SampleExercise.Server.csproj"
+
 jobs:
   build:
     runs-on: windows-latest
@@ -21,13 +28,24 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.x'
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+      - name: Restore solution dependencies
+        run: dotnet restore "${{ env.SOLUTION_PATH }}"
+
+      - name: Build entire solution
+        run: dotnet build "${{ env.SOLUTION_PATH }}" --configuration Release --no-restore
+
+      - name: Test solution
+        run: dotnet test "${{ env.SOLUTION_PATH }}" --configuration Release --no-build
+
+      - name: Publish server project (includes client build)
+        run: dotnet publish "${{ env.SERVER_PROJECT_PATH }}" --configuration Release --no-build --output "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -39,7 +57,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -50,7 +68,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -62,7 +80,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'zhihao-sample'
-          slot-name: 'Production'
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          slot-name: "Production"
           package: .
-          
